--- a/_config.yml
+++ b/_config.yml
@@ -15,10 +15,10 @@ goat_counter: "blog.melihsivri.dev" # put your GoatCounter name if you want to u
 remote_theme: riggraz/no-style-please
 
 theme_config:
-  appearance: "light" # can be "light", "dark" or "auto"
-  back_home_text: ".." # customize text for homepage link in post layout
-  date_format: "%Y-%m-%d" # customize how date is formatted
-  show_description: false # show blog description in home page
+  appearance: "dark" # can be "light", "dark" or "auto"
+  back_home_text: "← Home" # customize text for homepage link in post layout
+  date_format: "%B %d, %Y" # customize how date is formatted
+  show_description: true # show blog description in home page
 
 sass:
   style: :compressed
