--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@ remote_theme: riggraz/no-style-please
 
 theme_config:
   appearance: "dark" # can be "light", "dark" or "auto"
-  back_home_text: "← Home" # customize text for homepage link in post layout
+  back_home_text: "Home" # customize text for homepage link in post layout
   date_format: "%B %d, %Y" # customize how date is formatted
   show_description: true # show blog description in home page
 
